Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-68358

Missing query parameters in Mapbox Directions API

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.11.1
    • 5.11
    • Location
    • None

    Description

      From https://www.mapbox.com/api-documentation/#retrieve-directions - the following query parameters are missing in the Mapbox route query:

      - annotations

      - roundabout_exits

      - voice_units 

      Attachments

        For Gerrit Dashboard: QTBUG-68358
        # Subject Branch Project Status CR V

        Activity

          People

            brunoabinader Bruno de Oliveira Abinader
            brunoabinader Bruno de Oliveira Abinader
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes