Add missing Mapbox Directions API query parameters

Task-number: QTBUG-68358
Change-Id: I27422f5deb355dd4e4089f35c59a9f69d579cae8
Reviewed-by: Paolo Angelelli <paolo.angelelli@qt.io>
Reviewed-by: Alex Blasche <alexander.blasche@qt.io>